--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@angular/platform-browser-dynamic": "^9.0.7",
     "@angular/router": "^9.0.7",
     "@nebular/auth": "^5.0.0",
+    "@nebular/date-fns": "^5.0.0",
     "@nebular/eva-icons": "^5.0.0",
     "@nebular/security": "^5.0.0",
     "@nebular/theme": "^5.0.0",
     "bootstrap": "^4.4.1",
+    "date-fns": "^2.11.1",
     "eva-icons": "^1.1.3",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "nebular-icons": "1.1.0",
     "ng2-completer": "^3.0.3",
     "ng2-smart-table": "^1.6.0",
